src/test/deca/syntax/valid/21NullTest.deca
{
    int x = null;
    if (x == null) {
        println("OK");
    } else {
        println("KO");
    }
}
