src/test/deca/syntax/invalid/Objets/12ClassInClass.deca
class Invalid {
    class A {
        int x;
    }

    void printTest() {
        println("test");
    }
}